--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express-session": "^1.17.2",
     "method-override": "^3.0.0",
     "mongodb": "^4.2.1",
+    "multer": "^1.4.4",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0"
   }
